GNOME Bugzilla – Bug 775561
GFile is owned by GFileIcon. Do not unref it
Last modified: 2016-12-05 07:40:53 UTC
.
Created attachment 341301 [details] [review] optical-media: GFile is owned by GFileIcon. Do not unref it
Looks good, thanks for the patch. Attachment 341301 [details] pushed as d5e5ceb - optical-media: GFile is owned by GFileIcon. Do not unref it