optical-media: GFile is owned by GFileIcon. Do not unref it

https://bugzilla.gnome.org/show_bug.cgi?id=775561